spectec/test/elab/neg/type-typ-invalid-id.t
  $ ./main.exe type-typ-invalid-id.spectec 2>&1
  error[elab/typ-invalid-id]: invalid type identifier
    --> type-typ-invalid-id.spectec:4:8
    |
  4 | syntax x_1 = nat
    |        ^^^
  [1]
